# Poisson_Metal_CUDA

./: .gitignore  Doxyfile  README.md  build_and_run.sh  build_check_fp64.sh  build_four_boundaries.sh  build_rbgs_test.sh  check_fp64  check_fp64.mm  clean  fmg_test  four_boundaries_test  laplace_demo  main_fmg_simple.cpp  main_four_boundaries.cpp  main_laplace_demo.cpp  main_rbgs_test_suite.cpp  residual_history.csv  test_LaplaceMetalSolver.cpp  test_laplace_solver  test_laplace_solver.sh  test_rbgs
cuda/: .gitignore  CMakeLists.txt  LaplaceCUDASolver.cpp  LaplaceCUDASolver.hpp  METAL_TO_CUDA.md  Makefile  QUICKSTART.md  README.md  build.sh  kernel_wrappers.cu  laplace_kernels.cu  laplace_kernels_3d.cu  test_cuda_solver.cpp
docs/: build_performance_report.sh  generate_grouped_results.sh  generated_figures.tex  grouped_results.tex  performance_report.aux  performance_report.out  performance_report.tex  plot_residuals.sh
docs/html/: _laplace_metal_solver_8hpp.html  _laplace_metal_solver_8hpp__dep__incl.map  _laplace_metal_solver_8hpp__dep__incl.md5  _laplace_metal_solver_8hpp__incl.map  _laplace_metal_solver_8hpp__incl.md5  _laplace_metal_solver_8hpp_source.html  _laplace_metal_solver_8mm.html  _laplace_metal_solver_8mm__incl.map  _laplace_metal_solver_8mm__incl.md5  _laplace_metal_solver__core_8mm.html  _laplace_metal_solver__core_8mm__incl.map  _laplace_metal_solver__core_8mm__incl.md5  _laplace_metal_solver__io_8mm.html  _laplace_metal_solver__io_8mm__incl.map  _laplace_metal_solver__io_8mm__incl.md5  annotated.html  (+110 more)
metal/: LaplaceMetalSolver.hpp  LaplaceMetalSolverInternal.hpp  LaplaceMetalSolver_core.mm  LaplaceMetalSolver_io.mm  LaplaceMetalSolver_multigrid.mm.backup  LaplaceMetalSolver_solvers.mm  flowchart_example.dot  flowchart_example_comment.txt  laplace_kernels.metal
opencl/: OpenCLMGSolver.cpp  OpenCLMGSolver.hpp  kernels.cl  opencl_solution_laplace2d.csv  opencl_test  test_opencl_main.cpp
(+113 files in other folders)
